Added app starting app data and selected DOM elements

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2 class="heading--secondary">Transfer money</h2>
         <form action="" class="side-panel-form">
             <input class="side-panel-form__control transfer-to-input" id="transfer-to" name="transfer-to" type="text">
-            <input class="side-panel-form__control trasnfer-amount-input" id="transfer-amount" name="transfer-amount"
+            <input class="side-panel-form__control transfer-amount-input" id="transfer-amount" name="transfer-amount"
                    type="number">
             <button class="btn btn--side-panel btn--transfer">&rarr;</button>
             <label class="side-panel-form__label" for="transfer-to">Transfer to</label>
@@ -140,6 +140,8 @@
     <section class="section-remaining-time">
         You will be logged out in <span class="remaining-logout-time">00:00</span>
     </section>
+    <!-- Custom javascript -->
+    <script src="script.js"></script>
 </main>
 
 </body>
