--- a/index.html
+++ b/index.html
@@ -1,148 +1,197 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+      name="viewport"
+    />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <title>Bankist &mdash; Banking made minimialist</title>
     <!-- Linking Stylesheet and favicon -->
-    <link href="style.css" rel="stylesheet">
-    <link href="img/icon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="style.css" rel="stylesheet" />
+    <link href="img/icon.png" rel="shortcut icon" type="image/x-icon" />
     <!-- Google font -->
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-
-<!-- Header section -->
-<header class="header">
-    <p class="welcome-msg">Log in to get started</p>
-    <img alt="Bankist Logo" class="logo" src="img/logo.png">
-    <form class="login">
-        <input class="login__input user-input" id="user" name="user" placeholder="user" type="text">
-        <input class="login__input pin-input" id="pin" name="pin" placeholder="pin" type="text">
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Header section -->
+    <header class="header">
+      <p class="welcome-msg">Log in to get started</p>
+      <img alt="Bankist Logo" class="logo" src="img/logo.png" />
+      <form class="login">
+        <input
+          class="login__input user-input"
+          id="user"
+          name="user"
+          placeholder="user"
+          type="text"
+        />
+        <input
+          class="login__input pin-input"
+          id="pin"
+          name="pin"
+          placeholder="pin"
+          type="text"
+        />
         <label class="display--none" for="user">Username</label>
         <label class="display--none" for="pin">Password</label>
         <button class="btn btn--login">&rarr;</button>
-    </form>
-</header>
-<!-- App -->
-<main class="app">
-    <!-- Balance section -->
-    <section class="balance">
+      </form>
+    </header>
+    <!-- App -->
+    <main class="app">
+      <!-- Balance section -->
+      <section class="balance">
         <div>
-            <p class="balance__label">Current balance</p>
-            <p class="balance__sub">As of <span class="balance__time">00/00/0000, 00:00</span></p>
+          <p class="balance__label">Current balance</p>
+          <p class="balance__sub">
+            As of <span class="balance__time">00/00/0000, 00:00</span>
+          </p>
         </div>
         <p class="balance__amount">0</p>
-    </section>
-    <!-- Transactions pane -->
-    <section class="rounded--sm transactions">
+      </section>
+      <!-- Transactions pane -->
+      <section class="rounded--sm transactions">
         <!-- Transactions list -->
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--loss">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--loss">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
         <div class="transaction">
-            <p class="transaction__type transaction__type--profit">8 Deposits</p>
-            <p class="transaction__date">12/03/2020</p>
-            <p class="transaction__amount">1,300,00$</p>
+          <p class="transaction__type transaction__type--profit">8 Deposits</p>
+          <p class="transaction__date">12/03/2020</p>
+          <p class="transaction__amount">1,300,00$</p>
         </div>
-    </section>
-    <!-- Transfer pane -->
-    <section class="rounded--sm transfer">
+      </section>
+      <!-- Transfer pane -->
+      <section class="rounded--sm transfer">
         <h2 class="heading--secondary">Transfer money</h2>
         <form action="" class="side-panel-form">
-            <input class="side-panel-form__control transfer-to-input" id="transfer-to" name="transfer-to" type="text">
-            <input class="side-panel-form__control transfer-amount-input" id="transfer-amount" name="transfer-amount"
-                   type="number">
-            <button class="btn btn--side-panel btn--transfer">&rarr;</button>
-            <label class="side-panel-form__label" for="transfer-to">Transfer to</label>
-            <label class="side-panel-form__label" for="transfer-amount">Amount</label>
+          <input
+            class="side-panel-form__control transfer-to-input"
+            id="transfer-to"
+            name="transfer-to"
+            type="text"
+          />
+          <input
+            class="side-panel-form__control transfer-amount-input"
+            id="transfer-amount"
+            name="transfer-amount"
+            type="number"
+          />
+          <button class="btn btn--side-panel btn--transfer">&rarr;</button>
+          <label class="side-panel-form__label" for="transfer-to"
+            >Transfer to</label
+          >
+          <label class="side-panel-form__label" for="transfer-amount"
+            >Amount</label
+          >
         </form>
-    </section>
-    <!-- Loan Pane -->
-    <section class="rounded--sm loan">
+      </section>
+      <!-- Loan Pane -->
+      <section class="rounded--sm loan">
         <h2 class="heading--secondary">Request loan</h2>
         <form action="" class="side-panel-form">
-            <input class="side-panel-form__control loan-amount-input" id="loan-amount" name="loan-amount" type="number">
-            <button class="btn btn--side-panel btn--loan">&rarr;</button>
-            <label class="side-panel-form__label" for="loan-amount">Amount</label>
+          <input
+            class="side-panel-form__control loan-amount-input"
+            id="loan-amount"
+            name="loan-amount"
+            type="number"
+          />
+          <button class="btn btn--side-panel btn--loan">&rarr;</button>
+          <label class="side-panel-form__label" for="loan-amount">Amount</label>
         </form>
-    </section>
-    <!-- Close account pane -->
-    <section class="rounded--sm close">
+      </section>
+      <!-- Close account pane -->
+      <section class="rounded--sm close">
         <h2 class="heading--secondary">Close account</h2>
         <form action="" class="side-panel-form">
-            <input class="side-panel-form__control confirm-user-input" id="confirm-user" name="confirm-user"
-                   type="text">
-            <input class="side-panel-form__control confirm-pin-input" id="confirm-pin" name="confirm-pin" type="text">
-            <button class="btn btn--side-panel btn--close-account">&rarr;</button>
-            <label class="side-panel-form__label" for="confirm-user">Confirm user</label>
-            <label class="side-panel-form__label" for="confirm-pin">Confirm pin</label>
+          <input
+            class="side-panel-form__control confirm-user-input"
+            id="confirm-user"
+            name="confirm-user"
+            type="text"
+          />
+          <input
+            class="side-panel-form__control confirm-pin-input"
+            id="confirm-pin"
+            name="confirm-pin"
+            type="text"
+          />
+          <button class="btn btn--side-panel btn--close-account">&rarr;</button>
+          <label class="side-panel-form__label" for="confirm-user"
+            >Confirm user</label
+          >
+          <label class="side-panel-form__label" for="confirm-pin"
+            >Confirm pin</label
+          >
         </form>
-    </section>
-    <!-- Statistics section -->
-    <section class="section-statistics">
+      </section>
+      <!-- Statistics section -->
+      <section class="section-statistics">
         <div class="statistic">
-            <p class="statistic__name">in</p>
-            <p class="statistic__value in-amount">0</p>
+          <p class="statistic__name">in</p>
+          <p class="statistic__value in-amount">0</p>
         </div>
         <div class="statistic">
-            <p class="statistic__name">out</p>
-            <p class="statistic__value out-amount">0</p>
+          <p class="statistic__name">out</p>
+          <p class="statistic__value out-amount">0</p>
         </div>
         <div class="statistic">
-            <p class="statistic__name">interest</p>
-            <p class="statistic__value interest-amount">0</p>
+          <p class="statistic__name">interest</p>
+          <p class="statistic__value interest-amount">0</p>
         </div>
         <button class="btn btn--sort">&darr; sort</button>
-    </section>
-    <!-- Remaining time section -->
-    <section class="section-remaining-time">
-        You will be logged out in <span class="remaining-logout-time">00:00</span>
-    </section>
-    <!-- Custom javascript -->
-    <script src="script.js"></script>
-</main>
-
-</body>
+      </section>
+      <!-- Remaining time section -->
+      <section class="section-remaining-time">
+        You will be logged out in
+        <span class="remaining-logout-time">00:00</span>
+      </section>
+      <!-- Custom javascript -->
+      <script src="script.js"></script>
+    </main>
+  </body>
 </html>
